--- a/scriptCode/one.html
+++ b/scriptCode/one.html
@@ -191,7 +191,7 @@
         <p class="meta">عرض مبسّط للمستخدم — الاسم والبريد الإلكتروني فقط.</p>
       </div>
     </article>
-    <script src="scriptCode/main.js"></script>
+    <script src=""></script>
     <script>
       const params = new URLSearchParams(window.location.search);
       let name = params.get("name");
